<resources>
    <string name="app_name">Soulierge</string>
    <string name="landing_screen_create_event">Create Events to make your life special with us.</string>
    <string name="landing_screen_desc">We can add some information about the app here. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </string>
    <string name="label_sign_up">Sign up</string>
    <string name="label_sign_in">Sign in</string>
    <string name="btn_facebook_text">Sign in with Facebook</string>
    <string name="ph_or">or</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="facebook_continue">Continue with facebook</string>
    <string name="facebook_signup_message">If you sign up with Facebook you agree to the Terms of Use and Privacy Policy.
        If you want to other Soulierge users to see your profile, sign up with your email instead of Facebook. uncheck the box.</string>
    <string name="ph_first_name">First Name</string>
    <string name="ph_last_name">Last Name</string>
    <string name="message_agree_to_all">By signing up you agree to our Terms of Use and Privacy Policy</string>
    <string name="message_other_profile_checkbox">Let other Soulierge users to see my profile info. It can be managed later from settings.</string>
    <string name="ph_reset_password">Reset Password</string>
    <string name="message_reset_password">Enter the email address you used to create your account to reset password</string>
    <string name="ph_home">home</string>
    <string name="ph_events">Events</string>
    <string name="ph_add_credits">Add Credits</string>
    <string name="ph_upcoming">Upcoming</string>
    <string name="ph_profile">Profile</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ph_check_event">Check Event</string>
    <string name="message_join_event">Join event to enjoy or celebrate Join event to enjoy or celebrate</string>
    <string name="ph_find_event">Explore Events</string>
    <string name="try_soulierge">Try Soulierge</string>
    <string name="ph_find_organisation">Find Organizations</string>
    <string name="search_events">Find Event or Organisation</string>
    <string name="title_activity_maps">Map</string>
    <string name="ph_organisation">Organisation</string>
    <string name="social_event">Social Event</string>
    <string name="location">location</string>
    <string name="add_credits">Add Credits</string>
    <string name="add_credit_message">you can purchase more credits to enjoy the perks and offerings we have here.</string>
    <string name="message_days_remained">You have 10 days remaining</string>
    <string name="use_your_credit">Use your credit</string>
    <string name="buy_credits">Buy Credits</string>
    <string name="message_no_event">You don\'t have any upcoming event yet. Time to create one</string>
    <string name="find_an_event">Find an Event</string>
    <string name="settings">Settings</string>
    <string name="refer_to_friends">Refer to Friends</string>
    <string name="past">Participated</string>
    <string name="favourites">Favourites</string>
    <string name="setting">Setting</string>
    <string name="ph_account">Account</string>
    <string name="preferences">Preferences</string>
    <string name="ph_privacy">Privacy</string>
    <string name="ph_support">Support</string>
    <string name="help_center">Help Center</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="community_guidelines">Community Guidelines</string>
    <string name="ph_email_us">Email Us</string>
    <string name="logout">Logout</string>
    <string name="hint_enter_first_name">Enter First Name</string>
    <string name="hint_last_name">Enter Last Name</string>
    <string name="hint_user_name">Enter User Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_dob">Date of birth</string>
    <string name="hint_weight">Weight</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="hint_emergency_contact_name">Emergency contact name</string>
    <string name="hint_emergency_contact_phone">Emergency contact phone</string>
    <string name="account_setting">Account Setting</string>
    <string name="privacy_setting">Privacy Setting</string>
    <string name="who_can_find_me">Who can find me?</string>
    <string name="allow_members_to_look_for_me">Allow members to look for me</string>
    <string name="message_member_lookup">Soulierge members will only be able to see your profile details</string>
    <string name="quest_approved_friends">What can approved friends see?</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="past_events">Past events</string>
    <string name="favourites_events">Favourites events</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="select_file">Select File</string>

    <string-array name="select_image_from">
        <item>@string/lbl_gallery</item>
        <item>@string/lbl_camera</item>
    </string-array>

    <string-array name="filefrom">
        <item>PDF</item>
        <item>Image</item>
    </string-array>

    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="warnning_enter_email">Please insert email address</string>
    <string name="warnning_enter_valid_email">Please insert valid email address</string>
    <string name="warnning_enter_password">Please insert password</string>
    <string name="phone_no">Phone No.</string>
    <string name="warnning_enter_phone">Please insert phone no</string>
    <string name="warnning_enter_last_name">Please insert last name</string>
    <string name="warnning_enter_first_name">Please insert first name</string>
    <string name="facebook_app_id">810287399537649</string>
    <string name="fb_login_protocol_scheme">fb810287399537649</string>
    <string name="no_data_found">No record found</string>
    <string name="categories">Categories</string>
    <string name="del_message">Are you sure you want to delete?</string>
    <string name="add_category">Add Category</string>
    <string name="save">Save</string>
    <string name="category_message">Please enter valid category name</string>
    <string name="phone_state_permission_title">Phone State Permission is necessary</string>
    <string name="write_external_storage_title">Read, Write external storage Permissions are necessary</string>
    <string name="camera_title">Camera Permission is necessary</string>
    <string name="lbl_choose_image">Choose Image</string>
    <string name="hint_phone">Enter Phone</string>
    <string name="delete">Delete</string>
    <string name="add_event">Add Event</string>
    <string name="add_image">Add Image</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="event_details">Event Details</string>
    <string name="select_location">Select Location</string>
    <string name="event_categories">Event Categories</string>
    <string name="enter_event_capacity">Enter Event Capacity</string>
    <string name="enter_event_age_restriction">Enter Event Age Restriction</string>
    <string name="event_start_date">Event Start Date</string>
    <string name="event_end_date">Event End Date</string>
    <string name="create">create</string>
    <string name="add_organization">Add Organization</string>
    <string name="enter_organization_name">Enter Organization Name</string>
    <string name="organization_details">Organization Details</string>
    <string name="select_organization_location">Select Organization Location</string>
    <string name="enter_country">Enter Country</string>
    <string name="edit">Edit</string>
    <string name="lbl_organisation_users">Organisation Users</string>
    <string name="lbl_organisation_user">Organisation User</string>
    <string name="done">Done</string>
    <string name="short_event">Short Event</string>
    <string name="_1_week">1 Weeks</string>
    <string name="_2_weeks">2 Weeks</string>
    <string name="_3_weeks">3 Weeks</string>
    <string name="near_me">Near Me</string>
    <string name="category">Category</string>
    <string name="all">All</string>
    <string name="show_categories">Show Categories</string>
    <string name="show_participants">Show Participants</string>
    <string name="total_capacity">Total Capacity</string>
    <string name="available">Available</string>
    <string name="event_age_restriction">Event Age Restriction</string>
    <string name="update_organisation">Update Organization</string>
    <string name="update">Update</string>
    <string name="update_event">Update Event</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="lbl_participants">Participants</string>
    <string name="warning_time">Please select valid time</string>
    <string name="warning_select_start_time">Please select start time first</string>
    <string name="warning_search">Please insert Event or Organisation name</string>
    <string name="view_details">View Details</string>
    <string name="get_direction">Get Direction</string>
    <string name="save_location">Save Location</string>
    <string name="participate">Participate</string>
    <string name="cancel_participate">Cancel Participation</string>
    <string name="warning_cancel_participate">Are you want to cancel participation?</string>
    <string name="show_friends">Show Friends</string>
    <string name="show_pending_friends">Show Pending Friends</string>
    <string name="show_pending_request">Pending Friend Requests</string>
    <string name="users_friends">Users Friends</string>
    <string name="pending_friends">Pending Friends</string>
    <string name="pending_request">Pending Request</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="current_badge">Current Badge:</string>
    <string name="current_points">Current Points:</string>
    <string name="next_milestone_points">Next Milestone Points:</string>
    <string name="user_chakra">User Chakra</string>
    <string name="org_events">Organizations Events</string>
    <string name="organization">Organizations</string>
    <string name="warning_logout_message">Are you sure you want to Logout?</string>
    <string name="lbl_add">Add</string>

</resources>
