<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="center"
        android:background="@color/grey_sec"
        android:elevation="2dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/trenda_bold"
            android:text="@string/label_sign_up"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size_header"
            android:textStyle="bold" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/margin_normal_high"
        android:paddingBottom="@dimen/margin_normal_high"
        android:clipToPadding="false"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:paddingStart="@dimen/margin_horizontal_landing"
            android:paddingEnd="@dimen/margin_horizontal_landing">

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:background="@drawable/btn_facebook_bg"
                android:text="@string/facebook_continue"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal"
                android:fontFamily="@font/trenda_regular"
                android:text="@string/facebook_signup_message"
                android:textColor="@color/dark_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/edit_text_style"
                    android:layout_width="0dp"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_weight="1"
                    android:hint="@string/ph_first_name" />

                <EditText
                    style="@style/edit_text_style"
                    android:layout_width="0dp"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_weight="1"
                    android:hint="@string/ph_last_name" />
            </LinearLayout>

            <EditText
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/email_address" />

            <EditText
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:textColor="@color/dark_grey"
                android:text="@string/message_other_profile_checkbox"
                />

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@drawable/btn_secondary_bg"
                android:text="@string/label_sign_up" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/message_agree_to_all" />
        </LinearLayout>
    </ScrollView>




</LinearLayout>