<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_sec"
    android:orientation="vertical"
    tools:context=".fragments.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/grey_sec"
        android:elevation="2dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/trenda_bold"
            android:text="@string/account_setting"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size_header"
            android:textStyle="bold" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:fontFamily="@font/trenda_semibold"
                android:text="@string/ph_account"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/text_size_large" />

            <EditText
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@drawable/et_white_bg"
                android:hint="@string/hint_enter_first_name" />

            <EditText
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/et_white_bg"
                android:hint="@string/hint_last_name" />

            <EditText
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/et_white_bg"
                android:hint="@string/hint_user_name" />

            <EditText
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/et_white_bg"
                android:hint="@string/hint_email" />

            <EditText
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/et_white_bg"
                android:hint="@string/hint_gender" />

            <EditText
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/et_white_bg"
                android:hint="@string/hint_dob" />

            <EditText
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/et_white_bg"
                android:hint="@string/hint_weight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:fontFamily="@font/trenda_semibold"
                android:text="@string/emergency_contact"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/text_size_large" />

            <EditText
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@drawable/et_white_bg"
                android:hint="@string/hint_emergency_contact_name" />

            <EditText
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/et_white_bg"
                android:hint="@string/hint_emergency_contact_phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:fontFamily="@font/trenda_semibold"
                android:text="@string/emergency_contact"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/text_size_large" />

            <EditText
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@drawable/et_white_bg"
                android:hint="@string/hint_emergency_contact_name" />

            <EditText
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/et_white_bg"
                android:hint="@string/hint_emergency_contact_phone" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>