<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".SigninActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:title="@string/label_sign_in"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@color/grey_sec"
        android:elevation="2dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sign_in"
            android:textColor="@color/dark_grey"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_header"
            android:fontFamily="@font/trenda_bold"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_normal_high"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_horizontal_landing"
        android:paddingEnd="@dimen/margin_horizontal_landing">

        <Button
            style="@style/button_style"
            android:layout_width="match_parent"
            android:background="@drawable/btn_facebook_bg"
            android:text="@string/btn_facebook_text"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:fontFamily="@font/trenda_regular"
            android:text="@string/ph_or"
            android:textColor="@color/dark_grey" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_email"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:hint="@string/email_address" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_password"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_normal"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_sign_in"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@drawable/btn_secondary_bg"
            android:text="@string/label_sign_in" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/forgot_your_password" />
    </LinearLayout>


</LinearLayout>