<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddOrgUserActivity">

    <include layout="@layout/toola_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <EditText
                    android:id="@+id/edt_first_name"
                    style="@style/edit_text_style"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/et_white_bg"
                    android:hint="@string/hint_enter_first_name" />


                <EditText
                    android:id="@+id/edt_last_name"
                    style="@style/edit_text_style"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:background="@drawable/et_white_bg"
                    android:hint="@string/hint_last_name" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <EditText
                android:id="@+id/txtPhone"
                style="@style/edit_text_style"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/et_white_bg"
                android:hint="@string/hint_phone" />

            <EditText
                android:id="@+id/txtEmail"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/et_white_bg"
                android:hint="@string/hint_email" />

            <EditText
                android:id="@+id/txtPassword"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/et_white_bg"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnSaveOrgUser"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@drawable/btn_secondary_bg"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>